// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollSection should render its default content 1`] = `
<div
  style={
    Object {
      "flex": "1 1 auto",
      "position": "relative",
    }
  }
>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={false}
    autoHideDuration={200}
    autoHideTimeout={1000}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  />
</div>
`;

exports[`ScrollSection should render the given cells 1`] = `
<div
  style={
    Object {
      "flex": "1 1 auto",
      "position": "relative",
    }
  }
>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={false}
    autoHideDuration={200}
    autoHideTimeout={1000}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      key="0"
    >
      Cell A
    </div>
    <div
      key="1"
    >
      Cell B
    </div>
    <div
      key="2"
    >
      Cell C
    </div>
  </Scrollbars>
</div>
`;

exports[`ScrollSection should render the scroll arrows when the section is scrollable 1`] = `
<div
  style={
    Object {
      "flex": "1 1 auto",
      "position": "relative",
    }
  }
>
  <div
    className=""
    style={
      Object {
        "height": "100%",
        "left": 0,
        "position": "absolute",
      }
    }
  >
    <div
      id="scrollLeft"
      onClick={[Function]}
    />
  </div>
  <div
    className=""
    style={
      Object {
        "height": "100%",
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <div
      id="scrollRight"
      onClick={[Function]}
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={false}
    autoHideDuration={200}
    autoHideTimeout={1000}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      key="0"
    >
      Cell A
    </div>
    <div
      key="1"
    >
      Cell B
    </div>
    <div
      key="2"
    >
      Cell C
    </div>
  </Scrollbars>
</div>
`;
